<resources>
    <string name="app_name">Tron</string>
    <string name="startButton">Start Game</string>
    <string name="logoName">Tron Logo</string>
    <string name="enterName">Enter Name</string>
    <string name="displayName">Enter Name You Want Displayed</string>
    <string name="submitButton">Submit</string>
    <string name="music">Music</string>
    <string name="sounds">Sounds</string>
    <string name="go_back">Go Back</string>
    <string name="sound_options">Sound Options</string>
    <string name="player_options">Player Options</string>
    <string name="design">Design</string>
    <string name="color">Color</string>
    <string name="initial_image_for_tron_game">Initial Image for Tron Game</string>
    <string name="settings">Settings</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="teal">Teal</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="ultimate_snake_replace_later_with_custom_logo">ULTIMATE SNAKE (replace later with custom logo)</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="score">Score: %s</string>
    <string name="restart">Restart</string>
    <string name="todo">TODO</string>
    <string name="arena_size">Arena Size</string>
    <string name="_16_x_16">16 x 16</string>
    <string name="_36_x_36">36 x 36</string>
    <string name="_25_x_25">25 x 25</string>
    <string name="fast">Fast</string>
    <string name="player_speed">Player Speed</string>
    <string name="normal">Normal</string>
    <string name="slow">Slow</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="gameover">Game Over!</string>
    <string name="menu">Main Menu</string>
    <string name="endgame">End Game</string>
</resources>
