<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-59dp"
        tools:layout_editor_absoluteY="111dp">

        <Button
            android:id="@+id/pinkButton"
            android:layout_width="111dp"
            android:layout_height="61dp"
            android:layout_marginStart="244dp"
            android:layout_marginLeft="244dp"
            android:layout_marginTop="400dp"
            android:background="#EE56FF"
            android:text="@string/pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/purpleButton"
            android:layout_width="111dp"
            android:layout_height="61dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:background="#965CFF"
            android:text="@string/purple"
            app:layout_constraintEnd_toStartOf="@+id/orangeButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/blueButton"
            android:layout_width="111dp"
            android:layout_height="61dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="284dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:background="#03A9F4"
            android:text="@string/blue"
            app:layout_constraintEnd_toStartOf="@+id/orangeButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tealButton"
            android:layout_width="111dp"
            android:layout_height="61dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="284dp"
            android:layout_marginEnd="57dp"
            android:layout_marginRight="57dp"
            android:background="#00BCD4"
            android:text="@string/teal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/redButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/greenButton"
            android:layout_width="111dp"
            android:layout_height="61dp"
            android:layout_marginStart="244dp"
            android:layout_marginLeft="244dp"
            android:layout_marginTop="172dp"
            android:background="#4CAF50"
            android:text="@string/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/redButton"
            android:layout_width="111dp"
            android:layout_height="61dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="61dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:background="#F44336"
            android:text="@string/red"
            app:layout_constraintEnd_toStartOf="@+id/orangeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/yellowButton"
            android:layout_width="111dp"
            android:layout_height="61dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="172dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:background="#FFEB3B"
            android:text="@string/yellow"
            app:layout_constraintEnd_toStartOf="@+id/orangeButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/orangeButton"
            android:layout_width="111dp"
            android:layout_height="61dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="61dp"
            android:layout_marginEnd="57dp"
            android:layout_marginRight="57dp"
            android:background="#FF9800"
            android:text="@string/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/redButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/backToSettingsFromColor"
            android:layout_width="138dp"
            android:layout_height="82dp"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="137dp"
            android:layout_marginRight="137dp"
            android:layout_marginBottom="32dp"
            android:text="@string/go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinkButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>