<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/typeEnterName"
        android:layout_width="276dp"
        android:layout_height="83dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/enterName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterNameText"
        android:layout_width="303dp"
        android:layout_height="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/displayName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:hint="@string/displayName"/>

    <Button
        android:id="@+id/submitNameButton"
        android:layout_width="160dp"
        android:layout_height="73dp"
        android:layout_marginBottom="147dp"
        android:text="@string/submitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>